--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,3 +1,14 @@
+.home {
+  max-width: 1500px;
+  margin: 0 auto;
+}
+
+.home__row {
+  display: flex;
+  z-index: 1;
+  margin: 0 5px;
+}
+
 .home__banner {
   width: 100%;
   z-index: -1;
