--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,4 +1,5 @@
 .product {
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,10 +7,19 @@
   margin: 10px;
   padding: 20px;
   width: 100%;
-  max-height: 400px;
+  height: auto;
   min-width: 100px;
   background-color: #fff;
   z-index: 1;
+}
+
+.product__title {
+  padding: 10px;
+}
+
+.product__price {
+  height: 100px;
+  margin-bottom: 8px;
 }
 
 .product > img {
@@ -19,5 +29,20 @@
   margin-bottom: 15px;
 }
 
-.product__info {
+.product > button {
+  background-color: #ffc14b;
+  border: 1px solid;
+  border-color: #a88734 #9c7e31 #846a29;
+}
+
+.product__rating {
+  display: flex;
+}
+
+.product__ratingGold {
+  color: #ffd700;
+}
+
+.product__ratingWhite {
+  color: #aaa;
 }
